# whisper-mcp-server

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
.claude/skills/commit/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
scripts/: update-cargo-hash.sh
src/: audio.rs  http.rs  main.rs  mcp.rs  transcribe.rs
