[package]
name = "whisper-mcp-server"
version = "0.1.1"
edition = "2021"

[features]
cuda = ["whisper-rs/cuda"]

[dependencies]
whisper-rs = "0.14"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hound = "3.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
symphonia = { version = "0.5", features = ["mp3", "flac", "aac", "vorbis", "pcm", "adpcm", "ogg"] }
opus = "0.3"
ogg = "0.9"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = "z"
